<resources>
    <string name="app_name">Anotações</string>
    <string name="titulo1">Lista de Notas</string>
    <string name="titulo2">Criar Nova Anotação</string>
    <string name="titulo3">Editar Anotação</string>
    <string name="notaLabel1">Título</string>>
    <string name="notaLabel2">Conteúdo</string>>
    <string name="botaoNotas1">Criar nova anotação</string>
    <string name="botaoNotas2">Criar</string>
    <string name="botaoNotas3">Cancelar</string>
    <string name="botaoNotas4">Excluir</string>
    <string name="botaoNotas5">Salvar</string>
    <string name="dicaTitulo">Escreva o título da sua anotação</string>
    <string name="dicaConteudo">Escreva o conteúdo da sua anotação</string>
    <string name="dicaSemAnotacao">Não há anotações criadas</string>

    <string name="numeroAnotacao">ID</string>
    <string name="tituloAnotacao">TITULO</string>

    <string name="preencherTitulo">Título da Anotação</string>
    <string name="preencherConteudo">Conteúdo da Anotação</string>

    <string name="itens">Itens:</string>
    <!--Toasts-->
    <string name="criacaoBemSucedida">Anotação criada com sucesso!</string>
    <string name="criacaoMalSucedida">Infelizmente ocorreu um erro, tente novamente.</string>
    <string name="atualizacaoBemSucedida">Anotação atualizada com sucesso!</string>
    <string name="atualizacaoMalSucedida">Não foi possível atualizar a anotação, tente novamente.</string>
    <string name="exclusaoBemSucedida">Anotação excluída com sucesso!</string>
    <string name="exclusaoMalSucedida">Não foi possível excluir a anotação, tente novamente.</string>
    <string name="criarAnotacaoTituloVazio">Não foi possível criar a anotação. Adicione um título.</string>
    <string name="atualizarAnotacaoTituloVazio">Não foi possível atualizar a anotação. Adicione um título.</string>
    <!--Toast-->
</resources>
