<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    android:visibility="visible"
    android:weightSum="1"
    tools:context="javamobile.minhasanotacoes.EditarAnotacao">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/titulo3"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notaLabel1" />

    <EditText
        android:id="@+id/campoTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dicaTitulo"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/labelConteudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notaLabel2" />

    <EditText
        android:id="@+id/campoConteudo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/dicaConteudo"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botaoGravar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="42"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:onClick="atualizarAnotacao"
            android:text="@string/botaoNotas5"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botaoCancelar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="42"
            android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
            android:onClick="voltar"
            android:text="@string/botaoNotas3"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/botaoExcluir"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16"
            android:contentDescription="@string/botaoNotas4"
            android:onClick="excluirAnotacao"
            android:src="@android:drawable/ic_menu_delete"
            android:visibility="visible" />


    </LinearLayout>

</LinearLayout>